@@ -1,3 +1,9 @@
+2009-04-30  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c:    Let coroutines start with a much smaller 
+	* generic/tclCompile.h:  stack: 200 words (previously was 2000, 
+	* generic/tclExecute.c:  the same as interps)
+
 2009-05-07  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/env.test (printenvScript, env-4.3, env-4.5): [Bug 1513659]:
